<resources>
    <string name="app_name">SCMXpert</string>
    <string name="partner_id">Businees Partner ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="error_user_empty">Partner Id field can not be empty.</string>
    <string name="error_passwrod_empty">Password field can not be empty.</string>
    <string name="progress_log_in">Loggin User In</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_pass_title">Forgot password</string>
    <string name="email">E-mail</string>
    <string name="forgot_ur_password">Forgot your password?</string>
    <string name="forgot_descp">Don\'t worry enter your email to reset password</string>
    <string name="shipment_overview">Shipment Overview</string>
    <string name="live">Live   </string>
    <string name="deliver">Delivered</string>
    <string name="loading">Loading...</string>
    <string name="shipment_details">Shipment Details</string>
    <string name="complete_shipment">Complete Shipment</string>
    <string name="update_event">Update Event Shipment</string>
    <string name="share">Share</string>
    <string name="show_all">Show all the entries</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_test">Test</string>
    <string name="map">Map</string>
    <string name="shipment_id">Shipment ID</string>
    <string name="shipment_description">Shipment Description</string>
    <string name="connected_device">Connected Device</string>
    <string name="shipment_number">Shipment Number</string>
    <string name="type_reference">Type of Reference</string>
    <string name="event_id">Event ID</string>
    <string name="event_type">Event Type</string>
    <string name="partner">Partner</string>
    <string name="receiving_location">Receiving Location</string>
    <string name="device_return_location">Device Return Location</string>
    <string name="receiving_reference">Receiving Reference</string>
    <string name="receiving_description">Receiving Description</string>
    <string name="create_shipment">Create Shipment</string>
    <string name="internal_shipment">Internal Shipment ID</string>
    <string name="customer_name">Customer Name</string>
    <string name="partner_name">Partner Name</string>
    <string name="scan_shipment">Scan shipment number</string>
    <string name="route_details">Route Details</string>
    <string name="add_route">Add Route</string>
    <string name="device">Device</string>
    <string name="scan_device">Scan Device</string>
    <string name="expected_del_date">Expected Del.Date</string>
    <string name="goods">Goods</string>
    <string name="ship_date">Ship Date</string>
    <string name="delivery_number">Delivery Number</string>
    <string name="reference">Reference</string>
    <string name="dept_type">Dept/Type</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="event_reference">Event Reference</string>
    <string name="event_description">Event Description</string>
    <string name="delete_event">Cancel Event</string>
    <string name="update">Update Event</string>
    <string name="reset">Reset</string>
    <string name="customer_id">Customer ID</string>
    <string name="route_description">Route Description</string>
    <string name="route_id">Route ID</string>
    <string name="ship_from">Ship From</string>
    <string name="add_ship">Add Ship</string>
    <string name="ship_to">Ship To</string>
    <string name="primary_mode">Primary Mode</string>
    <string name="inco_terms">Inco Terms</string>
    <string name="standard_duration">Standard Duration</string>
    <string name="duration">Duration</string>
    <string name="good_type">Goods Type</string>
    <string name="shipment">Shipment Overview</string>
    <string name="partnerid">Partner ID</string>
    <string name="event_name">Event Name</string>
    <string name="no_connection">No internet connection</string>
    <string name="internal_shipment_empty">Internal Shipment ID field can not be empty.</string>
    <string name="customer_name_empty">Customer Name field can not be empty.</string>
    <string name="partner_name_empty">Partner Name field can not be empty.</string>
    <string name="shipment_number_empty">Shipment Number field can not be empty.</string>
    <string name="description_empty">Description field can not be empty.</string>
    <string name="type_reference_empty">Select Type Of Reference</string>
    <string name="route_empty">Please Select Route Details.</string>
    <string name="device_empty">Please Select Device.</string>
    <string name="expect_date_empty">Please Select Expected Del.Date</string>
    <string name="goods_empty">Please Select Goods Type.</string>
    <string name="session_timeout">Session TimeOut. Please Login Again.</string>
    <string name="logout">Are you sure you want to logout ?</string>
    <string name="try_later">Something went wrong try later.</string>
    <string name="select_reference">Select Type Reference</string>
    <string name="select_partner">Select Partner</string>
    <string name="event_id_error">Event Id field can not be empty.</string>
    <string name="event_description_error">Event Description can not be empty</string>
    <string name="event_reference_error">Event reference can not be empty</string>
    <string name="event_type_error">Event Type field can not be empty.</string>
    <string name="event_refer_error">Event Reference field can not be empty.</string>
    <string name="event_descrp_error">Event Description field can not be empty.</string>
    <string name="partner_id_empty">Select Partner</string>
    <string name="completed">Completed</string>
    <string name="status">Status</string>
    <string name="message">messasge</string>
    <string name="something_went_wrong">Some thing went wrong! Try Later</string>
    <string name="route_status">Route Status</string>
    <string name="customer_route_id">Customer Route ID</string>
    <string name="create_route">Create New Route</string>
    <string name="select_from">Select From</string>
    <string name="select_to">Select To</string>
    <string name="select_primary_mode">Select Primary Mode</string>
    <string name="select_inco">Select Inco Terms</string>
    <string name="select_status">Select Route Status</string>
    <string name="active">Active</string>
    <string name="draft">Draft</string>
    <string name="inactive">InActive</string>
    <string name="update_route">Update</string>
    <string name="invalid_credentails">User ID and Password are incorrect.</string>
    <string name="email_field_empty">Email field is empty.</string>
    <string name="select_location">Select Receiving Location</string>
    <string name="return_location">Select Return Location</string>
    <string name="receive_location_error">Select Receiving Location</string>
    <string name="delete">DELETE</string>
    <string name="event_completed">All Events completed</string>
    <string name="update_event_status"> No Event to update please click on complete button to complete event</string>
    <string name="complete_status_event">Right now you can only update event</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="shipment_created_successful">has been created</string>
    <string name="session_expire">Session Expire.Please login again.</string>
    <string name="dateTime"> Date &amp; Time :- </string>
    <string name="lat_long">Lat-Long :-</string>
    <string name="address">Address :-</string>
    <string name="device_id"><b><font fgcolor='#000000'>Device :-</font></b></string>
    <string name="shipment_numbers">Shipment Number :-</string>
    <string name="cancel_txt">Cance;</string>
</resources>
