<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:id="@+id/forgot_layout"
    android:orientation="vertical"
    tools:context=".views.forgotPassword.ForgotPassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/view_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="40dp"
            android:paddingRight="20dp"
            android:text="@string/forgot_pass_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="24dp"
            android:paddingTop="70dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|bottom"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:text="@string/forgot_ur_password" />


            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|bottom"
                android:text="@string/forgot_descp" />

            <!-- Email Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/email">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="20dp"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/background_dark" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reset"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_background"
                android:padding="12dp"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>
</layout>