<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lat_long_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat_long"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/lat_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/lat_long_txt"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_toRightOf="@id/lat_long"
            android:tint="@android:color/black"
            android:layout_alignParentRight="true"
            android:adjustViewBounds="true"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_close_black_24dp"/>

        <TextView
            android:id="@+id/address_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lat_long"
            android:textStyle="bold"
            android:text="@string/address"
            android:textColor="@android:color/black"
            />
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lat_long"
            android:layout_toRightOf="@id/address_txt"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/device_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:textStyle="bold"
            android:text="@string/device_id"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_toRightOf="@id/device_txt"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/shipment_number_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_below="@id/device"
            android:text="@string/shipment_numbers"
            android:textColor="@android:color/black"
            />


        <TextView
            android:id="@+id/shipment_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/device"
            android:textStyle="bold"
            android:layout_toRightOf="@id/shipment_number_txt"
            android:textColor="@color/colorPrimaryDark"
            />


        <TextView
            android:id="@+id/date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shipment_number"
            android:textColor="@android:color/black"
            android:text="@string/dateTime"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shipment_number"
            android:layout_toRightOf="@id/date_txt"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />

    </RelativeLayout>



</LinearLayout>