<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/view_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="10dp"
            android:paddingRight="24dp">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:src="@drawable/scmxpertlogo"
                android:tint="@color/view_background" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/icon_size"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical|bottom"
                android:text="@string/partner_id" />


            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Business Partner ID"
                android:singleLine="true"
                android:maxLength="15"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawableLeft="@drawable/password_icon_size"
                android:drawablePadding="10dp"
                android:gravity="center_vertical|bottom"
                android:text="@string/password" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"

                android:text="@string/forgot_password"
                android:textColor="@color/view_background"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_background"
                android:padding="12dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>
</layout>